public/global.css
:root {
  --background: rgb(20, 20, 22);
  --foreground: #e5e4df;

  --font: "Iosevka Aile", "SFMono-Regular", Consolas, Menlo, monospace,
    -apple-system, BlinkMacSystemFont;
  --light: 200;
  --normal: 300;
  --heavy: 400;

  --blue: #008afb;
  --cyan: #8be9fd;
  --green: #50fa7b;
  --magenta: #5f4b8b;
  --orange: #ff8906;
  --red: #ff5555;
  --white: #f8f8f2;
  --yellow: #f1fa8c;

  --firefox: #ff6611;
  --safari: #399df5;

  --branch: 1px solid #75828a;
}

* {
  box-sizing: border-box;
}

html {
  overflow-x: hidden;
  scrollbar-width: none;
  font-size: 24px;
}

@media (min-width: 768px) {
  html {
    font-size: 32px;
  }
}

html::-webkit-scrollbar {
  width: 0;
  height: 0;
}

body {
  display: flex;
  align-items: center;
  justify-content: center;

  background: var(--background);
  color: var(--foreground);
  font-family: var(--font);
  font-weight: var(--light);
  margin: 0; /*
  width: 100vw;
  min-height: 100vh; */
}

strong {
  font-weight: var(--heavy);
}

a,
a:visited {
  font-family: var(--font);
  font-size: 1rem;
  color: var(--foreground);
  text-decoration: none;
  outline: none;
  padding: 0 4px;
}

a:hover,
a:focus {
  color: var(--background);
  background: var(--green);
  font-weight: var(--normal);
  text-decoration: none;
}

ul {
  list-style: none;
  /* padding-left: 2.9ch;
  display: flex;
  justify-content: flex-end;
  flex-direction: column; */
}

.tree > ul {
  margin: 0;
  padding-left: 1.25rem;
}

li {
  position: relative;
  max-width: 25ch;
  word-wrap: break-word;
}

li::before {
  border-top: var(--branch);
  top: 0.75rem;
  width: 0.75rem;
}

li::after {
  border-left: var(--branch);
  height: 100%;
  top: 0.25rem;
}

li::before,
li::after {
  content: "";
  position: absolute;
  left: -1rem;
}

li:last-child::after {
  height: 0.5rem;
}

li.hideChildren > ul {
  display: none;
}

aside {
  margin-left: 1rem;
}

@media (min-width: 768px) {
  aside {
    margin-left: 1.33rem;
  }
}

